Bug 470603 - bb8e5458a748ea922c19294a38026cfeb48ddb02 breaks Overview effect when activated via keyboard shortcut
Summary: bb8e5458a748ea922c19294a38026cfeb48ddb02 breaks Overview effect when activate...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-06-03 20:08 UTC by Nate Graham
Modified: 2023-06-10 02:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-03 20:08:08 UTC
Activating Overview via keyboard shortcut was working in Plasma 6, but git bisect shows that it was broken by https://invent.kde.org/plasma/kwin/-/commit/bb8e5458a748ea922c19294a38026cfeb48ddb02.

Steps to reproduce
1. Be using Plasma 6--X11 or Wayland, doesn't make a difference
2. Hit Meta+W

Expected result
Overview activates normally and shows all my windows

Actual result
Overview starts activating but then immediately deactivates. It looks like my windows are bouncing a bit from the top-left screen corner towards the bottom right.

Additional information
- 200% scale
- Present Windows/Window View and Desktop Grid both work properly via keyboard shortcut activation
Comment 1 Bug Janitor Service 2023-06-10 00:37:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4166
Comment 2 Aleix Pol 2023-06-10 02:40:53 UTC
Git commit 0a7db79e7c26880012ca273619c79cd75ca9107c by Aleix Pol.
Committed on 10/06/2023 at 00:36.
Pushed by ngraham into branch 'master'.

overview: Do not trigger the toggle action twice

It's already connected as it's created by EffectTogglableState.

M  +0    -1    src/plugins/overview/overvieweffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/0a7db79e7c26880012ca273619c79cd75ca9107c