fix(effect): do not trigger overview toggle action twice

It's already connected as it's created by EffectTogglableState.

BUG: 470603